--- a/src/main/resources/templates/fragments/fasi.html
+++ b/src/main/resources/templates/fragments/fasi.html
@@ -1,51 +1,49 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<body>
 <div th:fragment="fasi-produzione">
     <h4>Fasi di Trasformazione</h4>
 
     <!-- Lista fasi già aggiunte -->
     <ul id="fasiList"
-        th:classappend="${#fields.hasErrors('fasiProduzione')} ? 'error'">
-    </ul>
-    <span class="error-message"
+        th:classappend="${#fields.hasErrors('fasiProduzione')} ? 'error'"></ul>
+    <span id="fasiListErr" class="error-message"
           th:utext="${#fields.hasErrors('fasiProduzione')} ?
                     ${#strings.arrayJoin(#fields.errors('fasiProduzione'), '<br/>')} : ''">
     </span>
 
     <!-- Bottone apre modale -->
-    <button type="button" onclick="modalUtils.openModal('faseModal')">
-        ➕ Aggiungi Fase
-    </button>
+    <button type="button" class="btn-open-modal" data-target="faseModal">➕ Aggiungi Fase</button>
 
     <!-- Modale aggiungi fase -->
     <div id="faseModal" class="modal">
         <div class="modal-content">
             <h3>Aggiungi Fase</h3>
 
+            <!-- Descrizione -->
             <label for="faseDescrizione">Descrizione:</label>
-            <input type="text" id="faseDescrizione"/>
+            <input type="text" id="faseDescrizione" />
+            <span id="faseDescrizioneErr" class="error-message"></span>
 
+            <!-- Produttore -->
             <label for="faseProduttore">Produttore:</label>
-            <select id="faseProduttore" onchange="caricaProdottiPerProduttore(this.value)">
+            <select id="faseProduttore" class="fase-produttore-select">
                 <option value="">-- Seleziona --</option>
                 <option th:each="prod : ${produttori}"
                         th:value="${prod.username}"
-                        th:text="|${prod.nome} ${prod.cognome}|">
-                </option>
+                        th:text="|${prod.nome} ${prod.cognome}|"></option>
             </select>
+            <span id="faseProduttoreErr" class="error-message"></span>
 
+            <!-- Prodotto base -->
             <label for="faseProdottoBase">Prodotto base:</label>
             <select id="faseProdottoBase">
                 <option value="">-- Seleziona prima un produttore --</option>
             </select>
+            <span id="faseProdottoBaseErr" class="error-message"></span>
 
+            <!-- Bottoni -->
             <div style="margin-top: 15px;">
-                <button type="button" onclick="aggiungiFase()">OK</button>
-                <button type="button" onclick="modalUtils.closeModal('faseModal')">Annulla</button>
+                <button type="button" class="btn-add-fase">OK</button>
+                <button type="button" class="btn-close-modal" data-target="faseModal">Annulla</button>
             </div>
         </div>
     </div>
 </div>
-</body>
-</html>
